--- a/index.html
+++ b/index.html
@@ -4,59 +4,71 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body-text">
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+      <nav class="nav-text">
+        <a class="logo-text-first-section" href="./index.html">WEB</a
+        ><span class="logo-text-second-section">STUDIO</span>
         <ul>
           <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address-text">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <!--Hero-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-text">Effective Solutions<br />for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
 
       <!--Core Values-->
       <section>
-        <h2>Core Values</h2>
+        <h2 class="sub-header-text visually-hidden">Core Values</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="small-header-text">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="small-header-text">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="small-header-text">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="small-header-text">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -67,7 +79,7 @@
 
       <!--What Are We Doing-->
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="sub-header-text">What are we doing</h2>
         <ul>
           <li>
             <img
@@ -94,16 +106,16 @@
       </section>
 
       <!--Team Members-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="section-with-light-wrapper">
+        <h2 class="sub-header-text">Our Team</h2>
+        <ul class="element-with-light-wrapper">
           <li>
             <img
               src="./images/team-member.jpg"
               width="264"
               alt="Team member photo"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="small-header-text">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -112,7 +124,7 @@
               width="264"
               alt="Team member photo"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="small-header-text">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -121,7 +133,7 @@
               width="264"
               alt="Team member photo"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="small-header-text">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -130,23 +142,19 @@
               width="264"
               alt="Team member photo"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="small-header-text">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo-text-first-section" href="./index.html">WEB</a
+      ><span class="logo-text-second-section-inverted">STUDIO</span>
+      <p class="body-text-inverted">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-      <img
-        src="./images/hero-background.jpg"
-        height="312"
-        alt="Footer section background"
-      />
     </footer>
   </body>
 </html>
