--- a/portfolio.html
+++ b/portfolio.html
@@ -21,159 +21,177 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body-text">
-    <header>
-      <nav class="nav-text">
-        <a class="logo-text-first-section" href="./index.html">WEB</a
-        ><span class="logo-text-second-section">STUDIO</span>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address-text">
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
-    </header>
+      <header class="header-container">
+        <div class="logo-container">
+        <nav class="nav-text">
+          <a class="logo-text-first-section logo-container" href="./index.html">WEB</a
+          ><span class="logo-text-second-section logo-container">STUDIO</span>
+          <ul class="nav-container">
+            <li class="nav-item"><a class="nav-link" href="">Studio</a></li>
+            <li class="nav-item"><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address-text">
+          <ul class="address-container">
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="address-item">
+              <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+        </div>
+      </header>
     <main>
+      <div class="container">
       <section>
-        <h1 class="visually-hidden">Portfolio</h1>
-        <p>
-          <button type="button" class="filter-button">All</button>
-          <button type="button" class="filter-button">Web Site</button>
-          <button type="button" class="filter-button">App</button>
-          <button type="button" class="filter-button">Design</button>
-          <button type="button" class="filter-button">Marketing</button>
-        </p>
-        <ul>
-          <li>
-            <a href="">
-              <img
-                src="./images/banking-app-interface.jpg"
-                alt="Banking App
+          <h1 class="visually-hidden">Portfolio</h1>
+          <p class="gallery-filter-container">
+            <button type="button" class="filter-button">All</button>
+            <button type="button" class="filter-button">Web Site</button>
+            <button type="button" class="filter-button">App</button>
+            <button type="button" class="filter-button">Design</button>
+            <button type="button" class="filter-button">Marketing</button>
+          </p>
+          <ul class="gallery-container">
+            <li class="gallery-container-item">
+              <a href="">
+                <img
+                  src="./images/banking-app-interface.jpg"
+                  alt="Banking App
               Interface Concept"
-                width="360"
-                height="300"
-              />
-            </a>
-            <h2 class="small-header-text">Banking App Interface Concept</h2>
-            <p>App</p>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-            </a>
-            <h2 class="small-header-text">Cashless Payment</h2>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-            </a>
-            <h2 class="small-header-text">Meditation App</h2>
-            <p>App</p>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-            </a>
-            <h2 class="small-header-text">Taxi Service</h2>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="Screen
+                  width="360"
+                  height="300"
+                />
+              </a>
+              <div class="gallery-info"><h2 class="gallery-header-title">Banking App Interface Concept</h2>
+              <p class="gallery-text">App</p></div>
+            </li>
+            <li class="gallery-container-item">
+              <a href="">
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+              </a>
+              <div class="gallery-info">
+              <h2 class="gallery-header-title">Cashless Payment</h2>
+              <p class="gallery-text">Marketing</p><div>
+            </li>
+            <li class="gallery-container-item">
+              <a href="">
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+              </a>
+              <div class="gallery-info">
+              <h2 class="gallery-header-title">Meditation App</h2>
+              <p class="gallery-text">App</p></div>
+            </li>
+            <li class="gallery-container-item">
+              <a href="">
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+              </a>
+              <div class="gallery-info">
+              <h2 class="gallery-header-title">Taxi Service</h2>
+              <p class="gallery-text">Marketing</p></div>
+            </li>
+            <li class="gallery-container-item">
+              <a href="">
+                <img
+                  src="./images/screen-illustrations.jpg"
+                  alt="Screen
               Illustrations"
-                width="360"
-                height="300"
-              />
-            </a>
-            <h2 class="small-header-text">Screen Illustrations</h2>
-            <p>Design</p>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-            </a>
-            <h2 class="small-header-text">Online Courses</h2>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/instargam-stories-concept.jpg"
-                alt="Instagram
+                  width="360"
+                  height="300"
+                />
+              </a>
+              <div class="gallery-info">
+              <h2 class="gallery-header-title">Screen Illustrations</h2>
+              <p class="gallery-text">Design</p></div>
+            </li>
+            <li class="gallery-container-item">
+              <a href="">
+                <img
+                  src="./images/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+              </a>
+              <div class="gallery-info">
+              <h2 class="gallery-header-title">Online Courses</h2>
+              <p class="gallery-text">Marketing</p></div>
+            </li>
+            <li class="gallery-container-item">
+              <a href="">
+                <img
+                  src="./images/instargam-stories-concept.jpg"
+                  alt="Instagram
               Stories Concept"
-                width="360"
-                height="300"
-              />
-            </a>
-            <h2 class="small-header-text">Instagram Stories Concept</h2>
-            <p>Design</p>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/organic-food.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-            </a>
-            <h2 class="small-header-text">Organic Food</h2>
-            <p>Web Site</p>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/fresh-coffee.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-            </a>
-            <h2 class="small-header-text">Fresh Coffee</h2>
-            <p>Web Site</p>
-          </li>
-        </ul>
+                  width="360"
+                  height="300"
+                />
+              </a>
+              <div class="gallery-info">
+              <h2 class="gallery-header-title">Instagram Stories Concept</h2>
+              <p class="gallery-text">Design</p></div>
+            </li>
+            <li class="gallery-container-item">
+              <a href="">
+                <img
+                  src="./images/organic-food.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+              </a>
+              <div class="gallery-info">
+              <h2 class="gallery-header-title">Organic Food</h2>
+              <p class="gallery-text">Web Site</p></div>
+            </li>
+            <li class="gallery-container-item">
+              <a href="">
+                <img
+                  src="./images/fresh-coffee.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
+              </a>
+              <div class="gallery-info">
+              <h2 class="gallery-header-title">Fresh Coffee</h2>
+              <p class="gallery-text">Web Site</p></div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer class="footer">
-      <a class="logo-text-first-section" href="./index.html">WEB</a
-      ><span class="logo-text-second-section-inverted">STUDIO</span>
-      <p class="body-text-inverted">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+    <div class="wide-container">
+      <footer class="footer">
+        <div class="footer-container">
+          <div class="footer-text">
+          <a class="logo-text-first-section" href="./index.html">WEB</a
+          ><span class="logo-text-second-section-inverted">STUDIO</span>
+          <p class="body-text-inverted">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+          </div>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
