--- a/portfolio.html
+++ b/portfolio.html
@@ -21,14 +21,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body-text">
-      <header class="header-container">
-        <div class="logo-container">
+    <header class="header-container">
+      <div class="logo-container">
         <nav class="nav-text">
-          <a class="logo-text-first-section logo-container" href="./index.html">WEB</a
+          <a class="logo-text-first-section logo-container" href="./index.html"
+            >WEB</a
           ><span class="logo-text-second-section logo-container">STUDIO</span>
           <ul class="nav-container">
             <li class="nav-item"><a class="nav-link" href="">Studio</a></li>
-            <li class="nav-item"><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
             <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
           </ul>
         </nav>
@@ -42,11 +45,11 @@
             </li>
           </ul>
         </address>
-        </div>
-      </header>
+      </div>
+    </header>
     <main>
-      <div class="container">
       <section>
+        <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
           <p class="gallery-filter-container">
             <button type="button" class="filter-button">All</button>
@@ -55,19 +58,25 @@
             <button type="button" class="filter-button">Design</button>
             <button type="button" class="filter-button">Marketing</button>
           </p>
+        </div>
+        <div class="container">
           <ul class="gallery-container">
             <li class="gallery-container-item">
               <a href="">
                 <img
                   src="./images/banking-app-interface.jpg"
                   alt="Banking App
-              Interface Concept"
+                        Interface Concept"
                   width="360"
                   height="300"
                 />
+                <div class="gallery-info">
+                  <h2 class="gallery-header-title">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="gallery-text">App</p>
+                </div>
               </a>
-              <div class="gallery-info"><h2 class="gallery-header-title">Banking App Interface Concept</h2>
-              <p class="gallery-text">App</p></div>
             </li>
             <li class="gallery-container-item">
               <a href="">
@@ -77,10 +86,11 @@
                   width="360"
                   height="300"
                 />
+                <div class="gallery-info">
+                  <h2 class="gallery-header-title">Cashless Payment</h2>
+                  <p class="gallery-text">Marketing</p>
+                </div>
               </a>
-              <div class="gallery-info">
-              <h2 class="gallery-header-title">Cashless Payment</h2>
-              <p class="gallery-text">Marketing</p><div>
             </li>
             <li class="gallery-container-item">
               <a href="">
@@ -90,10 +100,11 @@
                   width="360"
                   height="300"
                 />
+                <div class="gallery-info">
+                  <h2 class="gallery-header-title">Meditation App</h2>
+                  <p class="gallery-text">App</p>
+                </div>
               </a>
-              <div class="gallery-info">
-              <h2 class="gallery-header-title">Meditation App</h2>
-              <p class="gallery-text">App</p></div>
             </li>
             <li class="gallery-container-item">
               <a href="">
@@ -103,24 +114,28 @@
                   width="360"
                   height="300"
                 />
+
+                <div class="gallery-info">
+                  <h2 class="gallery-header-title">Taxi Service</h2>
+                  <p class="gallery-text">Marketing</p>
+                </div>
               </a>
-              <div class="gallery-info">
-              <h2 class="gallery-header-title">Taxi Service</h2>
-              <p class="gallery-text">Marketing</p></div>
             </li>
             <li class="gallery-container-item">
               <a href="">
                 <img
                   src="./images/screen-illustrations.jpg"
                   alt="Screen
-              Illustrations"
+                        Illustrations"
                   width="360"
                   height="300"
                 />
+
+                <div class="gallery-info">
+                  <h2 class="gallery-header-title">Screen Illustrations</h2>
+                  <p class="gallery-text">Design</p>
+                </div>
               </a>
-              <div class="gallery-info">
-              <h2 class="gallery-header-title">Screen Illustrations</h2>
-              <p class="gallery-text">Design</p></div>
             </li>
             <li class="gallery-container-item">
               <a href="">
@@ -130,24 +145,30 @@
                   width="360"
                   height="300"
                 />
+
+                <div class="gallery-info">
+                  <h2 class="gallery-header-title">Online Courses</h2>
+                  <p class="gallery-text">Marketing</p>
+                </div>
               </a>
-              <div class="gallery-info">
-              <h2 class="gallery-header-title">Online Courses</h2>
-              <p class="gallery-text">Marketing</p></div>
             </li>
             <li class="gallery-container-item">
               <a href="">
                 <img
                   src="./images/instargam-stories-concept.jpg"
                   alt="Instagram
-              Stories Concept"
+                        Stories Concept"
                   width="360"
                   height="300"
                 />
+
+                <div class="gallery-info">
+                  <h2 class="gallery-header-title">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="gallery-text">Design</p>
+                </div>
               </a>
-              <div class="gallery-info">
-              <h2 class="gallery-header-title">Instagram Stories Concept</h2>
-              <p class="gallery-text">Design</p></div>
             </li>
             <li class="gallery-container-item">
               <a href="">
@@ -157,10 +178,12 @@
                   width="360"
                   height="300"
                 />
+
+                <div class="gallery-info">
+                  <h2 class="gallery-header-title">Organic Food</h2>
+                  <p class="gallery-text">Web Site</p>
+                </div>
               </a>
-              <div class="gallery-info">
-              <h2 class="gallery-header-title">Organic Food</h2>
-              <p class="gallery-text">Web Site</p></div>
             </li>
             <li class="gallery-container-item">
               <a href="">
@@ -170,10 +193,12 @@
                   width="360"
                   height="300"
                 />
+
+                <div class="gallery-info">
+                  <h2 class="gallery-header-title">Fresh Coffee</h2>
+                  <p class="gallery-text">Web Site</p>
+                </div>
               </a>
-              <div class="gallery-info">
-              <h2 class="gallery-header-title">Fresh Coffee</h2>
-              <p class="gallery-text">Web Site</p></div>
             </li>
           </ul>
         </div>
@@ -183,12 +208,12 @@
       <footer class="footer">
         <div class="footer-container">
           <div class="footer-text">
-          <a class="logo-text-first-section" href="./index.html">WEB</a
-          ><span class="logo-text-second-section-inverted">STUDIO</span>
-          <p class="body-text-inverted">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+            <a class="logo-text-first-section" href="./index.html">WEB</a
+            ><span class="logo-text-second-section-inverted">STUDIO</span>
+            <p class="body-text-inverted">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
           </div>
         </div>
       </footer>
