--- a/portfolio.html
+++ b/portfolio.html
@@ -21,14 +21,15 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body-text">
-    <header class="header-container">
-      <div class="logo-container">
+    <header class="header">
+      <div class="container container-header">
         <nav class="nav-text">
-          <a class="logo-text-first-section logo-container" href="./index.html"
-            >WEB</a
-          ><span class="logo-text-second-section logo-container">STUDIO</span>
+          <a class="logo-text-first-section" href="./index.html">WEB</a
+          ><span class="logo-text-second-section">STUDIO</span>
           <ul class="nav-container">
-            <li class="nav-item"><a class="nav-link" href="">Studio</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="./portfolio.html">Portfolio</a>
             </li>
@@ -51,16 +52,24 @@
       <section>
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
-          <p class="gallery-filter-container">
-            <button type="button" class="filter-button">All</button>
-            <button type="button" class="filter-button">Web Site</button>
-            <button type="button" class="filter-button">App</button>
-            <button type="button" class="filter-button">Design</button>
-            <button type="button" class="filter-button">Marketing</button>
-          </p>
-        </div>
-        <div class="container">
-          <ul class="gallery-container">
+          <ul class="gallery-filter">
+            <li>
+              <button type="button" class="filter-button">All</button>
+            </li>
+            <li>
+              <button type="button" class="filter-button">Web Site</button>
+            </li>
+            <li>
+              <button type="button" class="filter-button">App</button>
+            </li>
+            <li>
+              <button type="button" class="filter-button">Design</button>
+            </li>
+            <li>
+              <button type="button" class="filter-button">Marketing</button>
+            </li>
+          </ul>
+          <ul class="gallery">
             <li class="gallery-container-item">
               <a href="">
                 <img
@@ -206,7 +215,7 @@
     </main>
     <div class="wide-container">
       <footer class="footer">
-        <div class="footer-container">
+        <div class="container">
           <div class="footer-text">
             <a class="logo-text-first-section" href="./index.html">WEB</a
             ><span class="logo-text-second-section-inverted">STUDIO</span>
